<resources>
    <string name="app_name">Eat Together</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="go_to_sign_up">Don\'t have an account?</string>
    <string name="description">Some word about you…</string>
    <string name="company">Company</string>
    <string name="localizationHint">Use the right button to locate you</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="sign_up">Sign up</string>
    <string name="title_activity_register">Register</string>
    <string name="log_out">Log out</string>
    <string name="settings">Settings</string>
    <string name="addEventFabDesc">Button to add event</string>
    <string name="add_event">Add event</string>
    <string name="title_activity_event">Event</string>
    <string name="addEventLayoutHeader">Where do you \nwant to go?</string>
    <string name="event_date">Event date</string>
    <string name="place_name">Place name</string>
    <string name="location">Location</string>
    <string name="event_desc">Some word about event…</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="left">Left</string>
    <string name="title_activity_add_event">Add event</string>
    <string name="join">Join</string>
    <string name="eventLayoutHeader">Going to the</string>
    <string name="update">Update</string>
    <string name="update_user_header">Edit your account info</string>
    <string name="update_user_toolbar">User</string>
    <string name="placeistanceRange">Place distance range: </string>
    <string name="kilomiters_shourcut">km</string>

    <string-array name="distance_array">
        <item>0.2</item>
        <item>0.5</item>
        <item>1</item>
        <item>1.5</item>
        <item>2</item>
        <item>2.5</item>
        <item>3</item>
    </string-array>
</resources>
